--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
  h1{color: aqua;text-align: center;}
  h2 {color: blueviolet;text-align: center;}
  q {color: tomato;}
+ a {text-decoration: none;color: red;}
