--- a/style.css
+++ b/style.css
@@ -2,3 +2,4 @@
  h2 {color: blueviolet;text-align: center;}
  q {color: tomato;}
  a,link {text-decoration: none;color: red;}
+ fieldset {border: solid purple;}
